--- a/style.css
+++ b/style.css
@@ -18,7 +18,10 @@ body {
 
 .button {
     background-color: #3882f6;
-    color: #F9FAF8
+    color: #F9FAF8;
+    padding: 5px;
+    margin-right: 300px;
+    border-radius: 5px;
 }
 
 .testimonial {
@@ -82,4 +85,28 @@ body {
     border: 3px solid #3882f6;
     height: auto;
     width: 200px;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-main-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-left: 75px;
+    padding-right: 50px;
+    padding-bottom: 75px;
+}
+
+.header-showcase {
+    padding-right: 50px;
+    margin-top: 25px;
 }
