--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width:fit-content;
 }
 
 .header {
     background-color: #1F2937;
+    padding-top: 20px;
 }
 
 .hero-main {
@@ -13,7 +15,7 @@ body {
 
 .hero-secondary, .nav-bar a {
     font-size: 18px;
-    color: #E5E7EB
+    color: #E5E7EB;
 }
 
 .button {
@@ -27,12 +29,12 @@ body {
 .testimonial {
     background-color: #E5E7EB;
     font-size: 36px;
-    color: #1F2937
+    color: #1F2937;
 }
 
 .main-content-title {
     font-size: 36px;
-    color: #1F2937
+    color: #1F2937;
 }
 
 .call-to-action {
@@ -77,7 +79,7 @@ body {
     display: flex;
     justify-content: space-around;
     text-align: center;
-    margin: 10px
+    margin: 10px;
 }
 
 .content-images img {
@@ -109,4 +111,23 @@ body {
 .header-showcase {
     padding-right: 50px;
     margin-top: 25px;
+}
+
+.header-showcase img {
+    border: 1px solid black;
+    margin-bottom: 50px;
+}
+
+.nav-links {
+    margin: 10px;
+    margin-right: 50px;
+}
+
+.header img {
+    margin-left: 60px;
+}
+
+.cta-button {
+    background-color: #1F2937;
+    color: #F9FAF8;
 }
